--- a/Capstone1_Data_Wrangling.ipynb
+++ b/Capstone1_Data_Wrangling.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -203,7 +203,7 @@
        "[5 rows x 931 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -287,7 +287,7 @@
        "Name: NOCRCASH, dtype: float64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -312,7 +312,7 @@
        "Name: NKRGALNC, dtype: float64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -510,24 +510,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After I preformed all my checks, I outputed the cleaned data form into a new .csv file to use for analysis. This means I do not have to keep preforming all these changes and check to the data form created form the original data source. As well, I am able to preserve the original data should I need to return to it."
+    "I decided to identify all the imputation flag columns and drop them from the dataframe. Even though the remaining were not constant, when spliting my dataset into training and test sets resulted in costant columns there due to the low number of imputations. The imputation flag columns are identified as columns beginning with 'Z' according to the public layout file provided by the data source."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "329"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Create clean csv to load DataFrame from in future analysis.\n",
-    "df.to_csv('recs2009_public_clean.csv', index = False)"
+    "zcols = list(df)\n",
+    "zcols = [l for l in zcols if l.startswith('Z')]\n",
+    "len(zcols)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -686,7 +698,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 898 columns</p>\n",
+       "<p>5 rows × 569 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -711,10 +723,228 @@
        "3        -2       -2        -2       -2        -2        -2  \n",
        "4        -2       -2        -2       -2        -2        -2  \n",
        "\n",
-       "[5 rows x 898 columns]"
+       "[5 rows x 569 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = df.drop(zcols, axis = 1)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After I preformed all my checks, I outputed the cleaned data form into a new .csv file to use for analysis. This means I do not have to keep preforming all these changes and check to the data form created form the original data source. As well, I am able to preserve the original data should I need to return to it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Create clean csv to load DataFrame from in future analysis.\n",
+    "df.to_csv('recs2009_public_clean.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DOEID</th>\n",
+       "      <th>REGIONC</th>\n",
+       "      <th>DIVISION</th>\n",
+       "      <th>REPORTABLE_DOMAIN</th>\n",
+       "      <th>TYPEHUQ</th>\n",
+       "      <th>NWEIGHT</th>\n",
+       "      <th>HDD65</th>\n",
+       "      <th>CDD65</th>\n",
+       "      <th>HDD30YR</th>\n",
+       "      <th>CDD30YR</th>\n",
+       "      <th>...</th>\n",
+       "      <th>SCALEEL</th>\n",
+       "      <th>KAVALNG</th>\n",
+       "      <th>PERIODNG</th>\n",
+       "      <th>SCALENG</th>\n",
+       "      <th>PERIODLP</th>\n",
+       "      <th>SCALELP</th>\n",
+       "      <th>PERIODFO</th>\n",
+       "      <th>SCALEFO</th>\n",
+       "      <th>PERIODKR</th>\n",
+       "      <th>SCALEKER</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2471.679705</td>\n",
+       "      <td>4742</td>\n",
+       "      <td>1080</td>\n",
+       "      <td>4953</td>\n",
+       "      <td>1271</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>-2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>10</td>\n",
+       "      <td>26</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8599.172010</td>\n",
+       "      <td>2662</td>\n",
+       "      <td>199</td>\n",
+       "      <td>2688</td>\n",
+       "      <td>143</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>-2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>8969.915921</td>\n",
+       "      <td>6233</td>\n",
+       "      <td>505</td>\n",
+       "      <td>5741</td>\n",
+       "      <td>829</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>-2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>18003.639600</td>\n",
+       "      <td>6034</td>\n",
+       "      <td>672</td>\n",
+       "      <td>5781</td>\n",
+       "      <td>868</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>-2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5999.605242</td>\n",
+       "      <td>5388</td>\n",
+       "      <td>702</td>\n",
+       "      <td>5313</td>\n",
+       "      <td>797</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>-2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 569 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   DOEID  REGIONC  DIVISION  REPORTABLE_DOMAIN  TYPEHUQ       NWEIGHT  HDD65  \\\n",
+       "0      1        2         4                 12        2   2471.679705   4742   \n",
+       "1      2        4        10                 26        2   8599.172010   2662   \n",
+       "2      3        1         1                  1        5   8969.915921   6233   \n",
+       "3      4        2         3                  7        2  18003.639600   6034   \n",
+       "4      5        1         1                  1        3   5999.605242   5388   \n",
+       "\n",
+       "   CDD65  HDD30YR  CDD30YR    ...     SCALEEL  KAVALNG  PERIODNG  SCALENG  \\\n",
+       "0   1080     4953     1271    ...           0       -2        -2       -2   \n",
+       "1    199     2688      143    ...           0        1         1        0   \n",
+       "2    505     5741      829    ...           0        3         5        3   \n",
+       "3    672     5781      868    ...           3        3         5        3   \n",
+       "4    702     5313      797    ...           0        1         1        0   \n",
+       "\n",
+       "   PERIODLP  SCALELP  PERIODFO  SCALEFO  PERIODKR  SCALEKER  \n",
+       "0        -2       -2        -2       -2        -2        -2  \n",
+       "1        -2       -2        -2       -2        -2        -2  \n",
+       "2        -2       -2        -2       -2        -2        -2  \n",
+       "3        -2       -2        -2       -2        -2        -2  \n",
+       "4        -2       -2        -2       -2        -2        -2  \n",
+       "\n",
+       "[5 rows x 569 columns]"
+      ]
+     },
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,6 +953,15 @@
     "df_clean = pd.DataFrame.from_csv('recs2009_public_clean.csv', index_col = None)\n",
     "df_clean.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
