--- a/Capstone1_Full_Regression_Iter2.ipynb
+++ b/Capstone1_Full_Regression_Iter2.ipynb
@@ -274,7 +274,7 @@
     }
    ],
    "source": [
-    "recs = pd.DataFrame.from_csv('recs2009_public_clean.csv', index_col=None)\n",
+    "recs = pd.DataFrame.from_csv('recs2009_public_clean_old.csv', index_col=None)\n",
     "recs.head()"
    ]
   },
@@ -866,7 +866,7 @@
    },
    "outputs": [],
    "source": [
-    "# Compare the min and max of each column. If they ate equal, column is constant.\n",
+    "# Compare the min and max of each column. If they are equal, column is constant.\n",
     "def constantCheck(df):\n",
     "    s1 = df.max()\n",
     "    s2 = df.min()\n",
