--- a/Capstone1_Full_Regression_Troubleshoot_Iter3.ipynb
+++ b/Capstone1_Full_Regression_Troubleshoot_Iter3.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -240,7 +240,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 898 columns</p>\n",
+       "<p>5 rows × 569 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -265,22 +265,22 @@
        "3        -2       -2        -2       -2        -2        -2  \n",
        "4        -2       -2        -2       -2        -2        -2  \n",
        "\n",
-       "[5 rows x 898 columns]"
+       "[5 rows x 569 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "recs = pd.DataFrame.from_csv('recs2009_public_clean_old.csv', index_col=None)\n",
+    "recs = pd.DataFrame.from_csv('recs2009_public_clean.csv', index_col=None)\n",
     "recs.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -324,77 +324,31 @@
     "            try:\n",
     "                x = pd.DataFrame(X[cols[count]])\n",
     "                score = s.fit(x,y).scores_\n",
-    "                d[cols[count]] = score[0]\n",
+    "                #d[cols[count]] = score[0]\n",
     "                count += 1\n",
     "            except:\n",
-    "                return cols[count]\n",
-    "                break\n",
+    "                d[cols[count]] = count\n",
+    "                count += 1\n",
+    "                #return cols[count]\n",
+    "                #break\n",
     "                \n",
     "    return d"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ZOCCUPYYRANGE'"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "col_Check(0,100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0    12080\n",
-       "1        3\n",
-       "Name: ZOCCUPYYRANGE, dtype: int64"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X.ZOCCUPYYRANGE.value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
    },
    "outputs": [],
    "source": [
-    "X.ZOCCUPYYRANGE = X.ZOCCUPYYRANGE.astype(int)"
+    "d = col_Check(300,400)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -402,16 +356,63 @@
     {
      "data": {
       "text/plain": [
-       "'ZOCCUPYYRANGE'"
+       "{'ELOTHER': 373, 'FOILAUX': 385, 'KROTHER': 391, 'KRWATER': 390}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "col_Check(0,100)"
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "d = col_Check(0,len(cols))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'AGEHHMEMCAT12': 451,\n",
+       " 'AGEHHMEMCAT13': 452,\n",
+       " 'AGEHHMEMCAT14': 453,\n",
+       " 'BTUKEROTH': 538,\n",
+       " 'BTUKERWTH': 537,\n",
+       " 'DOLKEROTH': 542,\n",
+       " 'DOLKERWTH': 541,\n",
+       " 'ELOTHER': 373,\n",
+       " 'FOILAUX': 385,\n",
+       " 'GALLONKEROTH': 534,\n",
+       " 'GALLONKERWTH': 533,\n",
+       " 'KROTHER': 391,\n",
+       " 'KRWATER': 390,\n",
+       " 'RADFUEL': 244}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d"
    ]
   },
   {
@@ -422,12 +423,179 @@
    },
    "outputs": [],
    "source": [
-    "X.ZOCCUPYYRANGE = X.ZOCCUPYYRANGE.astype(bool)"
+    "l = list(d.keys())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-2     12024\n",
+      " 1        25\n",
+      " 3        22\n",
+      " 5         5\n",
+      " 2         4\n",
+      " 21        2\n",
+      " 7         1\n",
+      "Name: RADFUEL, dtype: int64\n",
+      "\n",
+      "1    12082\n",
+      "0        1\n",
+      "Name: ELOTHER, dtype: int64\n",
+      "\n",
+      "0    12030\n",
+      "1       53\n",
+      "Name: FOILAUX, dtype: int64\n",
+      "\n",
+      "0    12080\n",
+      "1        3\n",
+      "Name: KRWATER, dtype: int64\n",
+      "\n",
+      "0    12045\n",
+      "1       38\n",
+      "Name: KROTHER, dtype: int64\n",
+      "\n",
+      "-2    12077\n",
+      " 2        5\n",
+      " 1        1\n",
+      "Name: AGEHHMEMCAT12, dtype: int64\n",
+      "\n",
+      "-2    12079\n",
+      " 1        3\n",
+      " 2        1\n",
+      "Name: AGEHHMEMCAT13, dtype: int64\n",
+      "\n",
+      "-2    12079\n",
+      " 1        4\n",
+      "Name: AGEHHMEMCAT14, dtype: int64\n",
+      "\n",
+      "0      12080\n",
+      "382        1\n",
+      "307        1\n",
+      "129        1\n",
+      "Name: GALLONKERWTH, dtype: int64\n",
+      "\n",
+      "0      12045\n",
+      "1          6\n",
+      "15         5\n",
+      "3          3\n",
+      "2          2\n",
+      "8          2\n",
+      "5          2\n",
+      "25         2\n",
+      "12         2\n",
+      "19         2\n",
+      "17         1\n",
+      "129        1\n",
+      "425        1\n",
+      "127        1\n",
+      "10         1\n",
+      "18         1\n",
+      "27         1\n",
+      "36         1\n",
+      "182        1\n",
+      "382        1\n",
+      "422        1\n",
+      "50         1\n",
+      "Name: GALLONKEROTH, dtype: int64\n",
+      "\n",
+      "0        12080\n",
+      "41435        1\n",
+      "51584        1\n",
+      "17336        1\n",
+      "Name: BTUKERWTH, dtype: int64\n",
+      "\n",
+      "0.000        12045\n",
+      "135.000          6\n",
+      "2025.000         4\n",
+      "405.000          3\n",
+      "675.000          2\n",
+      "270.000          2\n",
+      "1080.000         2\n",
+      "2283.000         1\n",
+      "2515.000         1\n",
+      "24624.000        1\n",
+      "17469.000        1\n",
+      "2507.000         1\n",
+      "1350.000         1\n",
+      "1620.000         1\n",
+      "6750.000         1\n",
+      "3375.000         1\n",
+      "4908.000         1\n",
+      "56984.000        1\n",
+      "51584.000        1\n",
+      "57308.157        1\n",
+      "2015.000         1\n",
+      "2374.000         1\n",
+      "3360.000         1\n",
+      "17199.000        1\n",
+      "3629.000         1\n",
+      "1592.000         1\n",
+      "Name: BTUKEROTH, dtype: int64\n",
+      "\n",
+      "0      12080\n",
+      "317        1\n",
+      "763        1\n",
+      "944        1\n",
+      "Name: DOLKERWTH, dtype: int64\n",
+      "\n",
+      "0.000       12045\n",
+      "15.000          3\n",
+      "5.000           2\n",
+      "3.000           2\n",
+      "26.000          2\n",
+      "41.000          1\n",
+      "321.000         1\n",
+      "12.000          1\n",
+      "4.000           1\n",
+      "48.000          1\n",
+      "6.000           1\n",
+      "1.000           1\n",
+      "1064.000        1\n",
+      "40.000          1\n",
+      "7.000           1\n",
+      "8.000           1\n",
+      "150.000         1\n",
+      "91.000          1\n",
+      "55.000          1\n",
+      "42.000          1\n",
+      "457.000         1\n",
+      "1117.371        1\n",
+      "315.000         1\n",
+      "944.000         1\n",
+      "89.000          1\n",
+      "38.000          1\n",
+      "60.000          1\n",
+      "88.000          1\n",
+      "9.000           1\n",
+      "44.000          1\n",
+      "23.000          1\n",
+      "68.000          1\n",
+      "69.000          1\n",
+      "25.000          1\n",
+      "Name: DOLKEROTH, dtype: int64\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item in l:\n",
+    "    n = l.index(item)\n",
+    "    print(X[l[n]].value_counts())\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -435,40 +603,16 @@
     {
      "data": {
       "text/plain": [
-       "'ZOCCUPYYRANGE'"
+       "12083"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "col_Check(0,100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False    12080\n",
-       "True         3\n",
-       "Name: ZOCCUPYYRANGE, dtype: int64"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X.ZOCCUPYYRANGE.value_counts()"
+    "len(X)"
    ]
   },
   {
